CSS Cutoff fix of message reply

--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -233,6 +233,8 @@
     margin: auto;
     flex-grow: 1;
 
+    padding: 0 2px;
+
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
